--- a/q/abouts/index.html
+++ b/q/abouts/index.html
@@ -22,7 +22,6 @@
       <li><a href="/q/abouts/index.html" title="About Us">About Us</a></li>
       <li><a href="/q/patches/index.html" title="Applique Patches">Applique Patches</a></li>
       <li><a href="/q/article/index.html" title="Blog">Blog</a></li>
-      <li><a href="/q/video/index.html" title="Video">Video</a></li>
       <li><a href="/q/contact/index.html" title="Contact Us">Contact Us</a></li>
     </ul>
   </div>
@@ -52,69 +51,7 @@
       </a>
     </div>
     <div class="big-x8">
-      <p>
-    Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;
-</p>
-<p>
-    Fashion and high quality lace make customers extraordinary.
-</p>
-<p>
-    Email: web@zalalaa.com
-</p>
-<p>
-    <br/>
-</p>
-<p>
-    <span style="background-color: rgb(255, 255, 0);">Free shipping for stores over $200</span>
-</p>
-<p>
-    <img src="https://c.zalalaa.com/q/py.webp"/>
-</p>
-<p>
-    9050150@qq.com
-</p>
-<p>
-    <br/>
-</p>
-<p>
-    <img src="https://c.zalalaa.com/q/a.webp"/>
-</p>
-<p>
-    <br/>
-</p>
-<p>
-    How to remit to Alipay?
-</p>
-<p>
-    &nbsp; Where can I send money?
-</p>
-<p>
-    &nbsp; https://remit.alipay.com
-</p>
-<p>
-    &nbsp; What information should I fill in at the money transfer platform?
-</p>
-<p>
-    &nbsp; Alipay ID (账号)
-</p>
-<p>
-    &nbsp; 9050150@qq.com
-</p>
-<p>
-    &nbsp; Last Name(姓)
-</p>
-<p>
-    &nbsp; LI
-</p>
-<p>
-    &nbsp; First Name(名)
-</p>
-<p>
-    &nbsp; QUAN
-</p>
-<p>
-    <br/>
-</p>
+      <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p><span style="text-wrap: wrap;">Professional production and processing of fabric stickers, embroidered stickers, fabric labels, embroidered labels, embroidered badges, shoulder badges, armbands, badges.</span></p><p>Fashion and high quality lace make customers extraordinary.</p><p>Email: web@zalalaa.com</p><p><br/></p><p><span style="background-color: rgb(255, 255, 0);">Free shipping for stores over $200</span></p><p><img src="https://c.zalalaa.com/q/py.webp"/></p><p>9050150@qq.com</p><p><br/></p><p><img src="https://c.zalalaa.com/q/a.webp"/></p><p>How to remit to Alipay?</p><p>&nbsp; Where can I send money?</p><p>&nbsp; https://remit.alipay.com</p><p>&nbsp; What information should I fill in at the money transfer platform?</p><p>&nbsp; Alipay ID (账号)</p><p>&nbsp; 9050150@qq.com</p><p>&nbsp; Last Name(姓)</p><p>&nbsp; LI</p><p>&nbsp; First Name(名)</p><p>&nbsp; QUAN</p><p><br/></p>
     </div>
   </div>
    <div class="grid big-grid-middle large-grid-large isplit-content">
