--- a/q/article/index.html
+++ b/q/article/index.html
@@ -23,7 +23,6 @@
       <li><a href="/q/abouts/index.html" title="About Us">About Us</a></li>
       <li><a href="/q/patches/index.html" title="Applique Patches">Applique Patches</a></li>
       <li><a href="/q/article/index.html" title="Blog">Blog</a></li>
-      <li><a href="/q/video/index.html" title="Video">Video</a></li>
       <li><a href="/q/contact/index.html" title="Contact Us">Contact Us</a></li>
     </ul>
   </div>
@@ -40,7 +39,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/order/index.html" title="Order dynamics">Order dynamics <span class="badge">0</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/video/index.html" title="Video">Video <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/order/index.html" title="Order dynamics">Order dynamics <span class="badge">0</span></a></div> 
     </div>
 </div>  
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
