--- a/q/contact/index.html
+++ b/q/contact/index.html
@@ -22,7 +22,6 @@
       <li><a href="/q/abouts/index.html" title="About Us">About Us</a></li>
       <li><a href="/q/patches/index.html" title="Applique Patches">Applique Patches</a></li>
       <li><a href="/q/article/index.html" title="Blog">Blog</a></li>
-      <li><a href="/q/video/index.html" title="Video">Video</a></li>
       <li><a href="/q/contact/index.html" title="Contact Us">Contact Us</a></li>
     </ul>
   </div>
@@ -52,24 +51,7 @@
       </a>
     </div>
     <div class="big-x8">
-      <p>
-    Email: web@zalalaa.com
-</p>
-<p>
-    Q Q: 9050150
-</p>
-<p>
-    <img src="https://c.zalalaa.com/q/wx.webp" width="200" height="200"/>
-</p>
-<p>
-    WeChat:qq9050150<br/>
-</p>
-<p>
-    Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China <br/>
-</p>
-<p>
-    <br/>
-</p>
+      <p>Email: web@zalalaa.com</p><p>Q Q: 9050150</p><p><img src="https://c.zalalaa.com/q/wx.webp" width="200" height="200"/></p><p>WeChat:qq9050150<br/></p><p>Address:NO.5, Dongping Square, Lecong Town, Shunde, Foshan, Guangdong,China</p><p><br/></p>
     </div>
   </div>
    <div class="grid big-grid-middle large-grid-large isplit-content">
