--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <h3 align="center" > <a href="/q/patches/index.html">PRODUCT</a></h3>
 	 <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240708/1720399319143229.webp" alt="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small">S/N: A39 <span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Twelve Zodiac Embroidered Clot···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/37.html" title="Cute little tiger embroidery patch,2024-07-07 14:48:59">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/u/upload/other/20240707/1720335273197985.webp" alt="Cute little tiger embroidery patch,2024-07-07 14:48:59" class="img-auto scale" /></figure>
@@ -226,14 +234,6 @@
         </div>
 		<strong class="weight-small">S/N: A18 <span class="text-danger">&#36;</span>:12.99</strong>
         <p class="flex-grow">Colorful Embroidered Lace Neck···</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/17.html" title="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800181983602.webp" alt="Embroidered fabric featuring a peony-colored floral pattern, with cut-out details, serving as stage clothing accessories. It includes water-soluble embroidered lace, hand-sewn brooches, and appliquéd embroidery.,2018-04-12 10:38:09" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-		<strong class="weight-small">S/N: A17 <span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="flex-grow">Embroidered fabric featuring a···</p>
       </a>
     </div>
   </div>
