--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -39,13 +39,37 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">15</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">17</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">17</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/42.html" title="Bee Butterfly Ironing Sticker,2024-07-15 17:18:54">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240715/1721035723888537.webp"  alt="Bee Butterfly Ironing Sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A42 <span class="text-danger">&#36;</span>:29.99</strong>
+        <p class="size-small flex-grow">Bee Butterfly Ironing Sticking Insect Patch Sticker Embroide···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240715/1721031033744472.webp"  alt="Embroidery Little Flowers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A41 <span class="text-danger">&#36;</span>:39.99</strong>
+        <p class="size-small flex-grow">Embroidery Small Flowers Children&#39;s Hair Accessories Clo···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/40.html" title="Hundreds of birds face fengbu cloth embroidery cloth,2024-07-15 15:10:03">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240715/1721029314783487.webp"  alt="Hundreds of birds face fengbu cloth embroidery cloth" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A40 <span class="text-danger">&#36;</span>:69.99</strong>
+        <p class="size-small flex-grow">Hundreds of birds facing fengbu paste embroidery cloth suppl···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/39.html" title="Twelve Zodiac Embroidered Cloth Sticker,2024-07-07 21:18:24">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240708/1720399319143229.webp"  alt="Twelve Zodiac Embroidered Cloth Sticker" class="img-auto scale" /> </figure>
