--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -39,13 +39,21 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">15</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">16</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">17</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">17</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Flower</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/41.html" title="Embroidery Little Flowers,2024-07-15 15:47:49">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240715/1721031033744472.webp"  alt="Embroidery Little Flowers" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A41 <span class="text-danger">&#36;</span>:39.99</strong>
+        <p class="size-small flex-grow">Embroidery Small Flowers Children&#39;s Hair Accessories Clo···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/36.html" title="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch,2024-07-07 12:18:25">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240707/1720334898412630.webp"  alt="Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch" class="img-auto scale" /> </figure>
