--- a/q/11.html
+++ b/q/11.html
@@ -97,8 +97,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a></p>
+<p>Next: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
