--- a/q/14.html
+++ b/q/14.html
@@ -111,8 +111,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
+<p>Next: <a href="/q/15.html">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
