--- a/q/15.html
+++ b/q/15.html
@@ -146,8 +146,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/14.html">Original horse face skirt, organza embroidery piece, cheongsam, Hanfu collar, cloud shoulder</a></p>
+<p>Next: <a href="/q/16.html">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
