--- a/q/17.html
+++ b/q/17.html
@@ -104,8 +104,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/16.html">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</a></p>
+<p>Next: <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
