--- a/q/2.html
+++ b/q/2.html
@@ -174,8 +174,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: 没有了！</p>
+<p>Next: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
