--- a/q/24.html
+++ b/q/24.html
@@ -223,8 +223,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
+<p>Next: <a href="/q/36.html">Daisy embroidered fabric patch cute self-adhesive sticker DIY bag decoration clothing patch patch patch</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
