--- a/q/29.html
+++ b/q/29.html
@@ -104,8 +104,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/28.html">Cartoon Rabbit Astronaut</a></p>
+<p>Next: <a href="/q/30.html">Cartoon Panda Cute Embroidered Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
