--- a/q/30.html
+++ b/q/30.html
@@ -111,8 +111,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/29.html">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</a></p>
+<p>Next: <a href="/q/31.html">Cute cartoon cat</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
