--- a/q/31.html
+++ b/q/31.html
@@ -111,8 +111,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/30.html">Cartoon Panda Cute Embroidered Cloth Sticker</a></p>
+<p>Next: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
