--- a/q/33.html
+++ b/q/33.html
@@ -167,8 +167,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/32.html">Cartoon flower butterfly embroidered fabric patch</a></p>
+<p>Next: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
