--- a/q/35.html
+++ b/q/35.html
@@ -160,8 +160,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/34.html">Ice cream cake embroidered cloth patch</a></p>
+<p>Next: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
