--- a/q/36.html
+++ b/q/36.html
@@ -97,8 +97,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/24.html">Embroidered lace three-dimensional fabric with ethnic denim clothing patches, water-soluble flowers, DIY tassel flowers</a></p>
+<p>Next: <a href="/q/41.html">Embroidery Little Flowers</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
