--- a/q/42.html
+++ b/q/42.html
@@ -188,8 +188,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/40.html">Hundreds of birds face fengbu cloth embroidery cloth</a></p>
+<p>Next: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
