--- a/q/46.html
+++ b/q/46.html
@@ -139,8 +139,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/45.html">Embroidery Gesture Patch Fashion DIY Dress Patch</a></p>
+<p>Next: <a href="/q/47.html">Cartoon rabbit cat wing cloth</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
