--- a/q/48.html
+++ b/q/48.html
@@ -195,8 +195,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/47.html">Cartoon rabbit cat wing cloth</a></p>
+<p>Next: <a href="/q/49.html">Cartoon shoes embroidered cloth sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
