--- a/q/54.html
+++ b/q/54.html
@@ -181,8 +181,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/41.html">Embroidery Little Flowers</a></p>
+<p>Next: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
