--- a/q/55.html
+++ b/q/55.html
@@ -328,8 +328,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/54.html">Cartoon flower cloth embroidery patch</a></p>
+<p>Next: <a href="/q/59.html">Multicoloured Little Flowers Embroidered Cartoon Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
