--- a/q/56.html
+++ b/q/56.html
@@ -370,8 +370,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/53.html">Leaf embroidery cloth sticker can be ironed hand stitch patch</a></p>
+<p>Next: <a href="/q/57.html">Panda Embroidery Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
