--- a/q/58.html
+++ b/q/58.html
@@ -342,8 +342,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/57.html">Panda Embroidery Cloth Sticker</a></p>
+<p>Next: <a href="/q/61.html">Cartoon animal bear head embroidery cloth sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
