--- a/q/59.html
+++ b/q/59.html
@@ -251,8 +251,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/55.html">Fruit and vegetable embroidery</a></p>
+<p>Next: <a href="/q/60.html">Multicoloured flowers embroidery patch decoration</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
