--- a/q/61.html
+++ b/q/61.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
-<title>Cartoon animal bear head embroidery cloth sticker-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+<title>Cartoon animal bear head embroidery cloth sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="description" content="Cartoon animal embroidery cloth affixed bear head embroidery decal subsidy decoration subsidy.Complete set (12 styles in total) $:39.99">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -50,7 +50,7 @@
     <span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span></p>
   <ul class="bread">
-    <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/index.html">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/index.html">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/61.html">Cartoon animal bear head embroidery cloth sticker</a>
+    <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/index.html">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/animal/index.html">Animal</a> <i class="icon-arrow-right"></i> <a href="/q/61.html">Cartoon animal bear head embroidery cloth sticker</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -167,8 +167,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/58.html">Cute Five Star Embroidery Cloth Sticker</a></p>
+<p>Next: no more</p>
 </div>
 <div class="grid-middle">
       <div class="grid">
