--- a/q/8.html
+++ b/q/8.html
@@ -167,8 +167,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/4.html">Embroidered lace fabric with three-dimensional spot flower patches on clothing, hot melt peony flowers</a></p>
+<p>Next: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
