--- a/q/10.html
+++ b/q/10.html
@@ -153,8 +153,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/9.html">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</a></p>
+<p>Next: <a href="/q/11.html">Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
