--- a/q/21.html
+++ b/q/21.html
@@ -105,7 +105,7 @@
     </div>
   </div>
 <p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Next: <a href="/q/25.html">Cute cartoon puppy embroidered fabric patch for down jacket</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
