--- a/q/22.html
+++ b/q/22.html
@@ -146,8 +146,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/18.html">Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</a></p>
+<p>Next: <a href="/q/23.html">New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
