--- a/q/27.html
+++ b/q/27.html
@@ -111,8 +111,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/26.html">New Cute Plush Rabbit Embroidered Cloth Sticker Self Adhesive DIY Phone Case Bag Decoration Cloth Patch</a></p>
+<p>Next: <a href="/q/28.html">Cartoon Rabbit Astronaut</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
