--- a/q/28.html
+++ b/q/28.html
@@ -104,8 +104,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/27.html">Cartoon animal embroidery stickers, teddy bear cloth stickers, cute DIY clothing accessories, decorative patch stickers</a></p>
+<p>Next: <a href="/q/29.html">Cartoon Planet Astronaut Embroidery Cloth Sticker Self adhesive Bag Decoration Cloth Patch</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
