--- a/q/32.html
+++ b/q/32.html
@@ -181,8 +181,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/31.html">Cute cartoon cat</a></p>
+<p>Next: <a href="/q/33.html">Cartoon animal embroidery</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
