--- a/q/34.html
+++ b/q/34.html
@@ -160,8 +160,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/33.html">Cartoon animal embroidery</a></p>
+<p>Next: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
