--- a/q/37.html
+++ b/q/37.html
@@ -153,8 +153,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/35.html">Plush cartoon teddy bear cloth sticker</a></p>
+<p>Next: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
