--- a/q/39.html
+++ b/q/39.html
@@ -167,8 +167,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/37.html">Cute little tiger embroidery patch</a></p>
+<p>Next: <a href="/q/40.html">Hundreds of birds face fengbu cloth embroidery cloth</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
