--- a/q/4.html
+++ b/q/4.html
@@ -188,8 +188,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/2.html">Embroidered lace three-dimensional fabric with ethnic denim fabric patches and water-soluble flowers</a></p>
+<p>Next: <a href="/q/8.html">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
