--- a/q/40.html
+++ b/q/40.html
@@ -223,8 +223,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/39.html">Twelve Zodiac Embroidered Cloth Sticker</a></p>
+<p>Next: <a href="/q/42.html">Bee Butterfly Ironing Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
