--- a/q/44.html
+++ b/q/44.html
@@ -195,8 +195,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/43.html">Skeleton embroidered cloth sticker</a></p>
+<p>Next: <a href="/q/45.html">Embroidery Gesture Patch Fashion DIY Dress Patch</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
