--- a/q/45.html
+++ b/q/45.html
@@ -132,8 +132,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/44.html">Fish Embroidery Sticker</a></p>
+<p>Next: <a href="/q/46.html">Skeleton Finger Ghost Head Embroidered Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
