--- a/q/49.html
+++ b/q/49.html
@@ -132,8 +132,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/48.html">Cartoon Cubs Embroidered Cloth Sticker</a></p>
+<p>Next: <a href="/q/50.html">Embroidery cloth paste wholesale</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
