--- a/q/50.html
+++ b/q/50.html
@@ -146,8 +146,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/49.html">Cartoon shoes embroidered cloth sticker</a></p>
+<p>Next: <a href="/q/51.html">Flamingo Embroidery Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
