--- a/q/51.html
+++ b/q/51.html
@@ -195,8 +195,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/50.html">Embroidery cloth paste wholesale</a></p>
+<p>Next: <a href="/q/52.html">Sailboat series embroidery cloth stickers</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
