--- a/q/53.html
+++ b/q/53.html
@@ -307,8 +307,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/52.html">Sailboat series embroidery cloth stickers</a></p>
+<p>Next: <a href="/q/56.html">Butterfly Embroidery Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
