--- a/q/57.html
+++ b/q/57.html
@@ -195,8 +195,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/56.html">Butterfly Embroidery Cloth Sticker</a></p>
+<p>Next: <a href="/q/58.html">Cute Five Star Embroidery Cloth Sticker</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
