--- a/q/9.html
+++ b/q/9.html
@@ -216,8 +216,8 @@
       </a>
     </div>
   </div>
-<p>Previous: <a href="/q/20.html">Skull cloth patch</a></p>
-<p>Next: <a href="/q/21.html">Tiger head Embroiderye sticker</a></p>
+<p>Previous: <a href="/q/8.html">Hand sewn embroidery, three-dimensional embroidery, flower fabric, handmade nail embroidery, badges, cheongsam flowers</a></p>
+<p>Next: <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a></p>
 </div>
 <div class="grid-middle">
       <div class="grid">
