--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -39,13 +39,21 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">31</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">22</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">32</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">21</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Animal</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/61.html" title="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240716/1721122103920304.webp"  alt="Cartoon animal bear head embroidery cloth sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A61 <span class="text-danger">&#36;</span>:39.99</strong>
+        <p class="size-small flex-grow">Cartoon animal embroidery cloth affixed bear head embroidery···</p>
+      </a>
       <a class="big-x3 flex flex-column" href="/q/58.html" title="Cute Five Star Embroidery Cloth Sticker,2024-07-16 16:23:33">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240716/1721120358159448.webp"  alt="Cute Five Star Embroidery Cloth Sticker" class="img-auto scale" /> </figure>
@@ -133,14 +141,6 @@
         </div>
         <strong class="weight-small">S/N: A46 <span class="text-danger">&#36;</span>:39.99</strong>
         <p class="size-small flex-grow">Skull Finger Ghost Head Embroidery Cloth Embroidery Embroide···</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/45.html" title="Embroidery Gesture Patch Fashion DIY Dress Patch,2024-07-16 09:15:46">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240716/1721093832149983.webp"  alt="Embroidery Gesture Patch Fashion DIY Dress Patch" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">S/N: A45 <span class="text-danger">&#36;</span>:39.99</strong>
-        <p class="size-small flex-grow">Small Cartoon Cloth Embroidery Gesture Patch Fashion Clothes···</p>
       </a>
     </div>
   </div>
