--- a/q/flower/index.html
+++ b/q/flower/index.html
@@ -39,21 +39,13 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">31</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">22</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/hot/index.html" title="Hot sales">Hot sales <span class="badge">5</span></a></div> <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">32</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">21</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">Flower</h3>
   <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/61.html" title="Cartoon animal bear head embroidery cloth sticker,2024-07-16 17:22:22">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240716/1721122103920304.webp"  alt="Cartoon animal bear head embroidery cloth sticker" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">S/N: A61 <span class="text-danger">&#36;</span>:39.99</strong>
-        <p class="size-small flex-grow">Cartoon animal embroidery cloth affixed bear head embroidery···</p>
-      </a>
       <a class="big-x3 flex flex-column" href="/q/60.html" title="Multicoloured flowers embroidery patch decoration,2024-07-16 17:11:02">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/u/upload/other/20240716/1721121730300987.webp"  alt="Multicoloured flowers embroidery patch decoration" class="img-auto scale" /> </figure>
@@ -141,6 +133,14 @@
         </div>
         <strong class="weight-small">S/N: A17 <span class="text-danger">&#36;</span>:12.99</strong>
         <p class="size-small flex-grow">Embroidered fabric featuring a peony-colored floral pattern,···</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2024-07-01 08:43:13">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://c.zalalaa.com/q/upload/other/20240701/1719794556332881.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">S/N: A16 <span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow"></p>
       </a>
     </div>
   </div>
